Changed documentation URL

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <p>PyXBMCt is a mini-framework which simplifies UI creation for XBMC addons. It works much like PyQt GUI framework (hence the name) and provides a main window and a number of controls (widgets). The main windows serves as a parent widget for the controls much like QtGui.QWidget class and provides a grid layout manager to place the controls.</p>
 
-<p>For more information visit the <a href="/html/index.html">documentation page</a>.</p>
+<p>For more information visit the <a href="/PyXBMCt/html/index.html">documentation page</a>.</p>
 
 The framework uses image textures from XBMC Confluence skin.</p>
 
